# codegen.py

./: .claude.json  .env  .env.example  .gitignore  .ruff.toml  ANALYSIS_SUMMARY.md  CODE_QUALITY_BASELINE_REPORT.md  COMPREHENSIVE_REMEDIATION_PLAN.md  ENHANCED_CLI_DEMO.py  ENHANCED_CLI_PROPOSAL.md  FASTAPI_README.md  MOCKUPui.md  PR9_VALIDATION_PLAN.md  PR9_VALIDATION_RESULTS.md  README.md  README_COMPLETE.md  README_FASTAPI.md  README_old.md  README_v2.md  TESTING_RESULTS.md  TEST_README.md  UPGRADE_SUMMARY.md  __init__.py  agent_run_analysis_summary.py  analytics.json  api.py  api_endpoints.md  app.py  bandit_report.json  cli.py  codegen_api.py  codegen_api_client.py  codegen_cli.py  codegen_dashboard.py  codegen_official_sdk.py  codegen_sdk.py  codegen_sdk_api.py  codegen_ui.py  codegenapi.py  comprehensive_validation_test.py  (+35 more)
DASHBOARD/: Main.py
TASKS/: BUG_FIX.md  CODEBASE_ANALYSIS.md  CODE_RESTRUCTURE.md  FEATURE_IMPLEMENTATION.md  PLAN_CREATION.md  TEST_GENERATION.md  code_restructure.md  config.yaml
TASKS/templates/: api_creation.md  bug_fix.md  codebase_analysis.md  feature_implementation.md  plan_creation.md  pr_template.md
backend/: __init__.py  fastapi_app.py  fastapi_app_complete.py  multi_run_processor.py  websocket_manager.py
backend/api/: __init__.py  codegen_api.py  fastapi_app.py  fastapi_app_complete.py  multi_run_processor.py  websocket_manager.py
backend/cli/: __init__.py  codegen_cli.py  commands.py  formatters.py
backend/client/: __init__.py
backend/core/: __init__.py
cli/: __init__.py  __main__.py  main.py
cli/commands/: __init__.py  agent.py  auth.py  config.py  org.py  status.py
cli/core/: __init__.py  app.py  config.py  errors.py  logging.py
cli/utils/: __init__.py  output.py  progress.py
codegen/: __init__.py  agents.py  cli.py  core.py  tasks.py
codegen/agents/: __init__.py  agent.py  task.py
codegen/cli/: __init__.py  commands.py
codegen/client/: __init__.py  async_client.py  base.py  sync.py  sync_client.py
codegen/commands/: __init__.py  config.py  run.py  status.py
codegen/compat/: __init__.py  api.py  cli.py  ui.py
codegen/config/: __init__.py  client_config.py  presets.py
codegen/exceptions/: __init__.py  api_exceptions.py  errors.py
codegen/ui/: views.py  (+4 more)
codegen_client/: __init__.py  client.py  config.py  exceptions.py
codegen_dashboard/: codegen_dashboard.py
codegen_ui/: __init__.py  app.py
codegenapi/: __init__.py  __main__.py  cli.py  codegen_client.py  config.py  exceptions.py  main.py  models.py  state_store.py  task_manager.py  template_loader.py
codegenapi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: default.yaml
dashboard/: IMPLEMENTATION_SUMMARY.md  README.md  app.py  real_dashboard_app.py  requirements.txt  start_dashboard.py
docs/: README.md  api.md  cli.md  developer_guide.md  error_handling.md  troubleshooting.md
enhanced_codegen_ui/: __init__.py  app.py  application.py
examples/: __init__.py  advanced_client_example.py  basic_usage.py  cli_examples.py  cli_examples.sh  example_usage.py  multi_run_agent_example.py  real_time_monitoring_example.py  simple_agent_example.py
frontend/: __init__.py  codegen_ui_app.py  enhanced_codegen_ui_app.py
mcp/: README.md  __init__.py  __main__.py  async_handler.py  client.py  codegen_client.py  codegen_client.pyi  codegen_endpoints.py  codegenapi.py  codegenapi_server.py  config.py  config.pyi  demo_commands.py  example_config.json  handlers.py  mcp_server.py  mcp_types.py  mock_server.py  pyproject.toml  requirements.txt  run_demo.py  server.py  simple_validate.py  state_manager.py  state_manager.pyi  task_manager.py  test_client.py  test_codegenapi_server.py  test_commands.py  test_integration.py  test_mcp_server.py  test_mcp_tools.py  test_server.py  test_unit.py  validate_commands.py  validation_loop.py
mcp/examples/: README.md  cli_example.sh  config_examples.json  list_examples.json  mcp_server_example.py  new_examples.json  orchestration_examples.json  resume_examples.json
tests/: __init__.py  agent_run_analysis_summary.py  agent_run_lifecycle_test.py  comprehensive_test.py  comprehensive_validation_test.py  conftest.py  final_validation_test.py  full_api_test.py  test_agents.py  test_cli.py  test_codegenapi.py  test_comprehensive_sdk.py  test_config_validation.py  test_core.py  test_enhanced_logging.py  test_error_handling.py  test_imports.py  test_retry_mechanisms.py  test_sdk.py  test_tasks.py  test_ui_components.py  test_unified_backend.py
ui/: README.md  __init__.py  application.py
ui_design/: layout.md
unified_backend/: __init__.py  client.py
(+219 files in other folders)
