[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codegen-mcp"
version = "0.1.0"
description = "MCP server for Codegen API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Codegen Team", email = "info@codegen.com"}
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
mcp = ["mcp>=0.1.0"]
async = ["aiohttp>=3.7.0"]

[tool.setuptools]
packages = ["mcp"]

[tool.ruff]
line-length = 100
target-version = "py38"

